src/objects/Charket__WeChatResponseKeyword__c.object
<CustomObject>
    <fields>
        <fullName>Charket__Keyword__c</fullName>
        <label>Keyword</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charket__MatchMode__c</fullName>
        <label>Match Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Exact Match</fullName>
                    <default>true</default>
                    <label>Exact Match</label>
                </value>
                <value>
                    <fullName>Phrase Match</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Charket__Volume__c</fullName>
        <label>Volume</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charket__WeChatResponse__c</fullName>
        <label>WeChat Response</label>
        <referenceTo>Charket__WeChatResponse__c</referenceTo>
        <relationshipLabel>WeChat Response Keywords</relationshipLabel>
        <relationshipName>WeChatResponseKeywords</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>WeChat Response Keyword</label>
    <nameField>
        <displayFormat>WRK-{0000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WeChat Response Keywords</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>